# banking_api

./: pyproject.toml
accounts/: models.py  permissions.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_account_user.py  0004_alter_account_status.py
accounts/tests/: conftest.py  factories.py  test_models.py  test_permissions.py  test_views.py
config/: settings.py  urls.py
transactions/: models.py  views.py
transactions/migrations/: 0001_initial.py
transactions/tests/: conftest.py  factories.py  test_models.py  test_views.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0003_alter_user_phone_number.py  0004_alter_user_email.py  0005_remove_user_username.py
users/tests/: factories.py  test_models.py  test_views.py
